2019-03-21  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/89779
	* gcc.dg/torture/pr89779.c: New testcase.

2019-03-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/78645
	* g++.dg/cpp0x/constexpr-ice20.C: New.

2019-03-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/89571
	* g++.dg/cpp0x/noexcept37.C: New.

2019-03-21  Iain Buclaw  <ibuclaw@gdcproject.org>

	PR d/89017
	* gdc.dg/pr89017.d: New test.

2019-03-20  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/71861
	* gfortran.dg/interface_abstract_5.f90: New test case.

2019-03-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/89775
	* gcc.target/s390/pr89775-1.c: New test.
	* gcc.target/s390/pr89775-2.c: New test.

2019-03-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/89752
	* g++.target/aarch64/aarch64.exp: New file.
	* g++.target/aarch64/pr89752.C: New test.

2019-03-19  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/89688
	* gcc.dg/strlenopt-61.c: New test.
	* g++.dg/warn/Wstringop-overflow-2.C: New test.

2019-03-19  Jim Wilson  <jimw@sifive.com>

	PR target/89411
	* gcc.target/riscv/losum-overflow.c: New test.

2019-03-19  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/89644
	* gcc.dg/Wstringop-truncation-8.c: New test.

2019-03-19  Martin Liska  <mliska@suse.cz>

	PR middle-end/89737
	* gcc.dg/pr89737.c: New test.

2019-03-19  Jan Hubicka  <hubicka@ucw.cz>

	PR lto/87809
	PR lto/89335
	* g++.dg/lto/pr87089_0.C: New testcase.
	* g++.dg/lto/pr87089_1.C: New testcase.
	* g++.dg/lto/pr89335_0.C: New testcase.

2019-03-19  Kelvin Nilsen  <kelvin@gcc.gnu.org>

	PR target/89736
	* gcc.target/powerpc/pr87532-mc.c: Modify dejagnu directives to
	restrict this test to vsx targets.

2019-03-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/89752
	* g++.dg/ext/asm15.C: Check for particular diagnostic wording.
	* g++.dg/ext/asm16.C: Likewise.
	* g++.dg/ext/asm17.C: New test.

2019-03-19  Eric Botcazou  <ebotcazou@adacore.com>

	* c-c++-common/unroll-7.c: New test.
